# tick

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.cursor/rules/: checklists.mdc  docs.mdc  project.mdc  python.mdc  tests.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  release.yaml
docs/: checklist-schema.md  extending.md  getting-started.md  index.md  performance.md  releasing.md  telemetry.md
src/tick/: __init__.py  __main__.py  logging.py
src/tick/adapters/loaders/: __init__.py  yaml_loader.py
src/tick/adapters/reporters/: __init__.py  base.py  html.py  json.py  markdown.py  stats.py  utils.py
src/tick/adapters/storage/: __init__.py  session_store.py
src/tick/cli/: __init__.py  app.py
src/tick/cli/commands/: cache.py  info.py  init.py  report.py  run.py  telemetry.py  templates.py  validate.py
src/tick/cli/ui/: __init__.py  progress.py  prompts.py  tables.py
src/tick/core/: __init__.py  cache.py  engine.py  perf.py  protocols.py  state.py  telemetry.py  utils.py  validator.py
src/tick/core/models/: __init__.py  checklist.py  enums.py  session.py
src/tick/templates/: __init__.py  registry.py
src/tick/templates/checklists/: __init__.py  accessibility.yaml  api_general.yaml  web_general.yaml
src/tick/templates/reports/: __init__.py  report.html.j2
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_error_scenarios.py  test_report_generation.py  test_resume_workflow.py  test_run_interactive.py  test_run_noninteractive.py
tests/integration/: test_engine_state.py  test_engine_storage.py  test_full_workflow.py  test_loader_models.py  test_reporters.py
tests/unit/: test_cache.py  test_perf_harness.py  test_telemetry.py
tests/unit/adapters/: test_markdown_reporter.py  test_reporter_snapshots.py  test_reporters.py  test_session_store.py  test_yaml_loader.py
tests/unit/adapters/__snapshots__/: test_reporter_snapshots.ambr
tests/unit/cli/: test_commands.py  test_init.py  test_main.py  test_report.py  test_run.py  test_run_command.py  test_templates_empty.py  test_ui.py  test_validate.py
tests/unit/core/: test_engine.py  test_engine_conditions.py  test_models.py  test_protocols.py  test_state.py  test_validator.py
